--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -19,4 +19,4 @@ jobs:
         env:
           APPROVALS: "1"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          ADD_LABEL: "approvedd"
+          ADD_LABEL: "approved"
